# ROS-Robot

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  ROS-Robot.code-workspace
.github/: FUNDING.yml  (+1 more)
Source Code/pico_ws/: CMakeLists.txt  README.md  micro_ros.cmake
Source Code/pico_ws/.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh  install_pico.sh  post_create.sh  post_start.sh  uros_init.sh
Source Code/pico_ws/.devcontainer/uros_agent/: uros_agent_create.sh  uros_agent_run.sh
Source Code/pico_ws/.devcontainer/vscode_config/: c_cpp_properties.json  launch.json  settings.json  tasks.json
Source Code/pico_ws/docker/: Dockerfile  bashrc  entrypoint.sh  init.sh  install_pico.sh  uros_init.sh
Source Code/pico_ws/firmware_src/: CMakeLists.txt  README.md
Source Code/pico_ws/firmware_src/.non_rtos_code/pico_a_helpers/: uROS_Init.c++
Source Code/pico_ws/firmware_src/.non_rtos_code/pico_b_helpers/: IO_Helpers_General.h
Source Code/pico_ws/firmware_src/.non_rtos_code/uart_transport/: pico_uart_transports.h
Source Code/pico_ws/firmware_src/lib/: CMakeLists.txt
Source Code/pico_ws/firmware_src/pico_a/: CMakeLists.txt  Pico_A.c++
Source Code/pico_ws/firmware_src/pico_a/helpers/: IO_Helpers_Edge.c++  IO_Helpers_Mux.h  IO_Helpers_Ultrasonic.c++  IO_Helpers_Ultrasonic.h  Sensor_Publishers.c++  uROS_Init.h
Source Code/pico_ws/firmware_src/pico_b/: CMakeLists.txt  Pico_B.c++
Source Code/pico_ws/firmware_src/pico_b/helpers/: Sensor_Publishers.c++
Source Code/pico_ws/firmware_src/uros_allocators/: uros_allocators.h
Source Code/pico_ws/libfreertos/: FreeRTOSConfig.h  FreeRTOS_POSIX_portable.h  README.md
Source Code/pico_ws/libfreertos/Config/: FreeRTOSConfig.h  FreeRTOS_POSIX_portable.h
Source Code/pico_ws/libmicroros/: build_uros.sh  my_toolchain.cmake
Source Code/pico_ws/libmicroros/src/rrp_pico_coms/: CMakeLists.txt  package.xml
Source Code/pico_ws/mainboard_firmware/: CMakeLists.txt  Common_Definitions.h  Diagnostics_Definitons.h  Frameid_Definitions.h  Global_Definitions.h  Pico_A.c++  Pico_B.c++  README.md
Source Code/pico_ws/mainboard_firmware/.old_test_files/: Enc_Systest.c++  Enc_Systest_Motor_PID.c++  README.md
Source Code/pico_ws/mainboard_firmware/Old Encoder Tests/: Enc_Systest_Imp_A_Final_Motor.TEMPCPP  Enc_Systest_Met_1.TEMPCPP  Enc_Systest_Met_2.TEMPCPP  Enc_systest_Imp_A_Old.TEMPCPP
Source Code/pico_ws/mainboard_firmware/Old Test Files/: Test_Sandbox.c++
Source Code/pico_ws/mainboard_firmware/Old test files/: Enc_Systest_Imp_A_Old_PID.c++
Source Code/pico_ws/mainboard_firmware/Pico_A_helpers/: Definitions.h  Diag_Msgs.h  IO_Helpers_Edge.c++  IO_Helpers_Mux.c++  IO_Helpers_Mux.h  IO_Helpers_Ultrasonic.h  Sensor_Publishers.c++  uROS_Init.c++
Source Code/pico_ws/mainboard_firmware/lib/: CMakeLists.txt
Source Code/pico_ws/mainboard_firmware/lib/Helper_lib/: CMakeLists.txt  Helpers.c++  Helpers.h
Source Code/pico_ws/mainboard_firmware/lib/Local_Helpers_lib/: CMakeLists.txt
Source Code/pico_ws/mainboard_firmware/lib/Motor_lib/: CMakeLists.txt  Motor.c++  Motor.h  Motor_Driver.c++  Motor_Driver.h  Motor_Encoder.c++  Motor_Safety.c++  Motor_Safety.h
Source Code/pico_ws/mainboard_firmware/lib/PID_lib/: CMakeLists.txt  PID_v1.c++  PID_v1.h  README.md
Source Code/pico_ws/mainboard_firmware/pico_a_helpers/: Definitions.h  Diag_Msgs.h  IO_Helpers_Edge.c++  IO_Helpers_Edge.h  IO_Helpers_Mux.c++  IO_Helpers_Mux.h  IO_Helpers_Ultrasonic.c++  Local_Helpers.c++  Local_Helpers.h  Self_Test.c++  Sensor_Publishers.c++  uROS_Init.c++  uROS_Init.h
Source Code/pico_ws/mainboard_firmware/pico_b_helpers/: Definitions.h  Diag_Msgs.h  IO_Helpers_General.c++  IO_Helpers_General.h  Local_Helpers.c++  Local_Helpers.h  Self_Test.c++  Sensor_Publishers.c++  uROS_Init.c++  uROS_Init.h
Source Code/pico_ws/mainboard_firmware/uart_transport/: pico_uart_transport.c  pico_uart_transports.h
Source Code/pico_ws/src/: CMakeLists.txt  Diagnostics_Names.h  README.md
Source Code/pico_ws/src/lib/: CMakeLists.txt
Source Code/pico_ws/src/multithread_test/: CMakeLists.txt  Test.c++  Test_Standalone.c++
Source Code/pico_ws/src/pico_a/: CMakeLists.txt  Pico_A.c++
Source Code/pico_ws/src/pico_b/: CMakeLists.txt  Pico_B.c++
Source Code/pico_ws/src/posix/: README.md  functions.c  functions.h
Source Code/pico_ws/src/uart_transport/: pico_uart_transport.c
Source Code/pico_ws/src/uros_allocators/: uros_allocators.c
Source code/Main Board Firmware/: CMakeLists.txt  Common_Definitions.h  README.md  Test_Sandbox.c++
Source code/Main Board Firmware/Old Encoder Tests/: Enc_Systest_Met_2.TEMPCPP
Source code/Main Board Firmware/Pico_A_helpers/: Definitions.h  IO_Helpers_Edge.h  IO_Helpers_Ultrasonic.c++  uROS_Init.h
Source code/Main Board Firmware/Pico_B_helpers/: Pico_B_New.c++
Source code/Main Board Firmware/lib/Motor_lib/: Motor.c++  Motor_Driver.h  Motor_Safety.c++  Motor_Safety.h
Source code/Main Board Firmware/lib/PID_lib/: PID_v1.c++
Source code/Raspberry Pi Pico src/: CMakeLists.txt  Enc_Systest.c++  Enc_Systest_Motor.c++  Enc_Systest_Motor_PID.c++  Encoder_System_Comb.c++  Encoder_Test.c++  Encoder_Test_Old_Sys.c++  Pico_A copy.c++  Pico_A.c++  Pico_A.cpp  Pico_B.c++  Pico_B.cpp  README.md  Test_Sandbox.c++
Source code/Raspberry Pi Pico src/Old Encoder Tests/: Enc_Systest_Imp_A_Final_Motor.TEMPCPP  Enc_Systest_Imp_A_Old_PID.c++  Enc_Systest_Met_1.c++  Enc_Systest_Met_2.c++  Enc_systest_Imp_A_Old.TEMPCPP  Enc_systest_Imp_A_Old.c++
Source code/Raspberry Pi Pico src/Pico_A/: IO_Helpers_Edge.c++  IO_Helpers_Mux.c++  IO_Helpers_Ultrasonic.c++
Source code/Raspberry Pi Pico src/Pico_B/: Pico_B_New.c++
Source code/Raspberry Pi Pico src/lib/: helpers.h
Source code/Raspberry Pi Pico src/lib/Helper_lib/: CMakeLists.txt  Helpers.c++  Helpers.h
Source code/Raspberry Pi Pico src/lib/Motor_lib/: CMakeLists.txt  Motor.c++  Motor.h  Motor_Driver.c++  Motor_Driver.h  Motor_Encoder.c++  Motor_Encoder.h  Motor_Safety.c++  Motor_Safety.h
Source code/Raspberry Pi Pico src/lib/PID_lib/: CMakeLists.txt  PID_v1.c++  PID_v1.h  README.md
(+365 files in other folders)
